--- a/styles.css
+++ b/styles.css
@@ -1,63 +1,129 @@
-body{
-    background-image: url("Asset/IntactLogo_workshop.png");
-    background-position: left top;
-    background-repeat: no-repeat;
+/* styles.css */
+
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #ffffff;
+    background: url('Asset/background.png') no-repeat center center fixed;
     background-size: cover;
 }
 
-img.icon{
-    position: calc(center);
+.wiki-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(139, 0, 0, 0.8);
+    padding: 10px 20px;
+    color: #ffffff;
 }
 
-#topText{
-    text-align:center;
-    color:red;
+.wiki-header .logo {
+    font-size: 1.5em;
+    font-weight: bold;
 }
 
-#topText{
-    background-color: rgb(127, 255, 212, 0);
-    background-image: url("Asset/FireDust1.gif");
+.search-bar {
+    display: flex;
 }
 
-#topText:hover{
-    color:gold;
-    background-color: brown;
+.search-bar input {
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
 }
 
-h3{
-    text-align: right;
-    color:blueviolet;
+.search-bar button {
+    padding: 5px 10px;
+    border: none;
+    background-color: #b22222;
+    color: #ffffff;
+    border-radius: 5px;
+    margin-left: 5px;
+    cursor: pointer;
 }
 
-h3{
-    /*background-image: url("Asset/FireDust2.gif");*/
-    background-position: center;
-    background-repeat: repeat-x;
+.search-bar button:hover {
+    background-color: #d2691e;
 }
 
-h3:hover{
-    color:red;
-    background-color: bisque;
+.content {
+    display: flex;
+    background-color: rgba(43, 43, 43, 0.9);
 }
 
-ul
-{
-    list-style-image: url('Asset/star.png');
+.sidebar {
+    width: 200px;
+    background-color: rgba(139, 0, 0, 0.8);
+    padding: 10px;
 }
 
-table
-{
-    border-collapse:collapse;
-}
-table,th, td
-{
-    border: 1px solid black;
+.sidebar nav ul {
+    list-style: none;
+    padding: 0;
 }
 
-div{
-    background-color: lightgrey;
-    width: 300px;
-    border: 25px solid green;
-    padding: 25px;
-    margin: 25px;
+.sidebar nav ul li {
+    margin: 10px 0;
+}
+
+.sidebar nav ul li a {
+    color: #ffffff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.sidebar nav ul li a:hover {
+    color: #d2691e;
+}
+
+.main-content {
+    flex-grow: 1;
+    padding: 20px;
+    background-color: rgba(59, 59, 59, 0.9);
+    text-align: center;
+}
+
+.main-content h1 {
+    color: #ff4500;
+    border-bottom: 2px solid #8b0000;
+    padding-bottom: 10px;
+}
+
+.main-content img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.categories {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.category {
+    background-color: rgba(139, 0, 0, 0.8);
+    padding: 15px;
+    border-radius: 8px;
+    text-align: center;
+    flex: 1;
+    margin: 0 10px;
+}
+
+.category h2 {
+    color: #ffffff;
+}
+
+.category p {
+    color: #f0f0f0;
+}
+
+.wiki-footer {
+    text-align: center;
+    padding: 10px;
+    background-color: rgba(139, 0, 0, 0.8);
+    color: #ffffff;
 }
