--- a/searchTool/searchPreviewPage.css
+++ b/searchTool/searchPreviewPage.css
@@ -7,13 +7,19 @@
 }
 
 .preview-item {
-    width: 100%;  /* 设置为100%，占满整个父容器的宽度 */
-    height: 200px;  /* 固定高度 */
+    width: 100%;
+    height: 200px;
     border: 1px solid #ddd;
     border-radius: 8px;
     overflow: hidden;
-    cursor: pointer;  /* 鼠标悬停时显示为指针 */
-    position: relative; /* 使按钮能够绝对定位 */
+    cursor: pointer;
+    position: relative;
+    transition: transform 0.3s ease, border-color 0.3s ease; /* 只应用在transform和border-color上 */
+}
+
+.preview-item:hover {
+    transform: scale(1.04);
+    border-color: #a01414;  /* 改变边框颜色 */
 }
 
 iframe {
@@ -37,8 +43,10 @@ iframe {
     font-size: 0.9em;
     width: 20%;
     height: 40%;
+    transition: background-color 0.3s ease, height 0.2s ease, width 0.2s ease; /* 添加过渡效果 */
 }
 
 .go-button:hover {
     background-color: #8b1a1a; /* 按钮悬停时的深红色 */
+    width: 100%;
 }
