--- a/weaponPage.css
+++ b/weaponPage.css
@@ -1,5 +1,5 @@
 body {
-    background: url('Asset/background.png') no-repeat center center fixed;
+    background: url('/Asset/background.png') no-repeat center center fixed;
     background-size: cover;
     font-family: Arial, sans-serif;
     margin: 0;
@@ -64,6 +64,7 @@ body {
 .image-block img {
     max-width: 100%;
     border-radius: 8px;
+    background-color: #627461;
 }
 
 .image-block p {
