--- a/index.css
+++ b/index.css
@@ -200,3 +200,38 @@ body {
     text-decoration: underline;
     color: #ffd700;
 }
+
+@media screen and (max-width: 768px) {
+    .wiki-header {
+        flex-direction: column;
+        text-align: center;
+    }
+    
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .sidebar {
+        width: 100%;
+    }
+    
+    .main-content {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .search-bar {
+        flex-direction: column;
+        gap: 5px;
+    }
+    
+    .search-bar input {
+        width: 100%;
+    }
+    
+    .categories {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    }
+}
